perf(template): add js template for obo

--- a/templates/package.json
+++ b/templates/package.json
@@ -24,6 +24,7 @@
         "js/notification-timer-trigger",
         "js/sso-tab",
         "js/workflow",
+        "js/sso-tab-with-obo-flow",
         "ts/command-and-response",
         "ts/dashboard-tab",
         "ts/default-bot",
