--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -35,7 +35,7 @@
     "test:teamsAppDriver": "nyc mocha \"tests/component/driver/teamsApp/*.test.ts\"",
     "test:coordinator": "nyc mocha \"tests/component/coordinator.test.ts\"",
     "test:provisionUtil": "nyc mocha \"tests/component/provisionUtils.test.ts\"",
-    "test:env": "nyc mocha \"tests/component/envUtil.test.ts\"",
+    "test:envUtil": "nyc mocha \"tests/component/envUtil.test.ts\"",
     "test:envMgr": "nyc mocha \"tests/core/environment.test.ts\"",
     "test:generator": "nyc mocha \"tests/component/generator/*.test.ts\"",
     "test:upgrade": "npx mocha \"tests/core/middleware/migration/*.test.ts\"",
@@ -51,6 +51,7 @@
     "test:azureFuncDeploy": "nyc mocha \"tests/component/driver/deploy/azure/AzureFunctionDeployDriver.test.ts\"",
     "test:devportal": "nyc mocha \"tests/component/developerPortalScaffoldUtils.test.ts\"",
     "test:qm": "nyc mocha \"tests/ui/qm.visitor.test.ts\"",
+    "test:question": "nyc mocha \"tests/question/*.test.ts\"",
     "test:coll": "nyc mocha \"tests/core/collaborator.test.ts\"",
     "clean": "rm -rf build",
     "build": "rimraf build && npx tsc -p ./",
