--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -50,7 +50,7 @@
     "test:azureDeployImpl": "nyc mocha \"tests/component/driver/deploy/azure/AzureDeployImpl.test.ts\"",
     "test:azureFuncDeploy": "nyc mocha \"tests/component/driver/deploy/azure/AzureFunctionDeployDriver.test.ts\"",
     "test:devportal": "nyc mocha \"tests/component/developerPortalScaffoldUtils.test.ts\"",
-    "test:qm": "nyc mocha \"tests/ui/qm.visitor.test.ts\"",
+    "test:visitor": "nyc mocha \"tests/ui/qm.visitor.test.ts\"",
     "test:question": "nyc mocha \"tests/question/*.test.ts\"",
     "test:coll": "nyc mocha \"tests/core/collaborator.test.ts\"",
     "clean": "rm -rf build",
