--- a/packages/fx-core/tests/samples/sampleV3/teamsapp.yml
+++ b/packages/fx-core/tests/samples/sampleV3/teamsapp.yml
@@ -1,3 +1,8 @@
+# yaml-language-server: $schema=https://aka.ms/teams-toolkit/1.0.0/yaml.schema.json
+# Visit https://aka.ms/teamsfx-v5.0-guide for details on this file
+# Visit https://aka.ms/teamsfx-actions for details on actions
 version: 1.0.0
+
+projectId: 00000000-0000-0000-0000-000000000000
 
 environmentFolderPath: ./teamsfx
