--- a/.github/workflows/ui-test.yml
+++ b/.github/workflows/ui-test.yml
@@ -316,7 +316,7 @@ jobs:
       - name: M365 Login
         working-directory: packages/tests
         run: | # rm -r -f ~/.fx/account
-          npx ts-node src/scripts/m365Login.ts -- '${{ env.M365_ACCOUNT_NAME }}' '${{ env.M365_ACCOUNT_PASSWORD }}'
+          npx ts-node src/scripts/m365Login.ts -- '${{ env.M365_USERNAME }}' '${{ env.M365_PASSWORD }}'
 
       - name: Azure Login(win)
         if: matrix.os == 'windows-latest'
