fix: revert fix lockfile version change

--- a/packages/sdk-react/tsconfig.json
+++ b/packages/sdk-react/tsconfig.json
@@ -18,7 +18,7 @@
     "resolveJsonModule": true,
     "typeRoots": ["node_modules/@types"],
     "types": [
-      "jest", "node", "@types/jest"
+      "jest", "node"
     ]
   },
   "include": ["src"],
