--- a/.github/workflows/ui-test.yml
+++ b/.github/workflows/ui-test.yml
@@ -202,7 +202,7 @@ jobs:
             secrets_file: packages/tests/scripts/test.json.gpg
             map: 'AZURE_CLIENT_SECRET=AZURE_CLIENT_SECRET,AZURE_CLIENT_ID=AZURE_CLIENT_ID,CLEAN_CLIENT_ID=CLEAN_CLIENT_ID,CLEAN_TENANT_ID=CLEAN_TENANT_ID,M365_COLLABORATOR=M365_COLLABORATOR,M365_DISPLAY_NAME=M365_DISPLAY_NAME,M365_ACCOUNT_PASSWORD=M365_PASSWORD,M365_TENANT_ID=M365_TENANT_ID,M365_USERNAME=M365_USERNAME,M365_USERNAME_2=M365_USERNAME_2,M365_USERNAME_3=M365_USERNAME_3,M365_USERNAME_4=M365_USERNAME_4'
         env:
-            GPG_PASSPHRASE: "officedev/teamsfx@ddd"
+            GPG_PASSPHRASE: ${{ secrets.SECRETS_PASSPHRASE }}
 
       - name: Set m365 account (unix)
         if: matrix.os != 'windows-latest'
