ci: update code owner

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -219,6 +219,10 @@
 /packages/fx-core/resource/yaml-schema @1yefuwang1 @wenytang-ms @kuojianlu @Siglud
 /packages/fx-core/src/core @jayzhang @LongOddCode @1yefuwang1 @nliu-ms @xzf0587 @hund030
 
+/packages/fx-core/src/component/configManager @1yefuwang1 @wenytang-ms @kuojianlu @Siglud
+/packages/fx-core/tests/component/configManager @1yefuwang1 @wenytang-ms @kuojianlu @Siglud
+
+
 /packages/fx-core/src/question @jayzhang @xzf0587 @hund030 @LongOddCode
 /packages/fx-core/src/error @jayzhang @xzf0587 @hund030 @LongOddCode
 
