--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -256,6 +256,6 @@
 /packages/fx-core/src/component/resource/botService @kimizhu @swatDong @kuojianlu
 /packages/fx-core/tests/component/resource/botService @kimizhu @swatDong @kuojianlu
 
-/packages/fx-core/tests/component/driver/teamsApp @nliu @jayzhang @yuqizhou77
-/packages/fx-core/tests/plugins/resource/appstudio @nliu @jayzhang @yuqizhou77
-/packages/fx-core/templates/plugins/resource/appstudio @nliu
+/packages/fx-core/tests/component/driver/teamsApp @nliu-ms @jayzhang @yuqizhou77
+/packages/fx-core/tests/plugins/resource/appstudio @nliu-ms @jayzhang @yuqizhou77
+/packages/fx-core/templates/plugins/resource/appstudio @nliu-ms
