--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -259,3 +259,6 @@
 /packages/fx-core/tests/common/m365 @kimizhu @swatDong @kuojianlu
 /packages/fx-core/src/component/resource/botService @kimizhu @swatDong @kuojianlu
 /packages/fx-core/tests/component/resource/botService @kimizhu @swatDong @kuojianlu
+
+/packages/fx-core/src/component/driver/middleware/updateProgress.ts @tecton @jayzhang @LongOddCode
+/packages/fx-core/tests/component/driver/middleware/updateProgress.test.ts @tecton @jayzhang @LongOddCode
