--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -86,6 +86,7 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^4.13.0",
     "adm-zip": "^0.5.9",
+    "ajv": "^6.12.6",
     "axios-mock-adapter": "^1.20.0",
     "botbuilder-core": ">=4.18.0 <5.0.0",
     "chai": "^4.3.4",
