--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -116,6 +116,7 @@
     "@azure/core-auth": "^1.4.0",
     "@azure/identity": "^3.1.3",
     "@microsoft/metrics-ts": "^0.0.4",
+    "@microsoft/teamsfx-api": "^0.22.2",
     "@microsoft/teamsfx-core": "^2.0.2",
     "adm-zip": "^0.5.5",
     "applicationinsights": "^1.8.10",
