test: upgrade to latest ui test repo code

--- a/.github/workflows/ui-test.yml
+++ b/.github/workflows/ui-test.yml
@@ -46,6 +46,9 @@ on:
         required: false
         type: string
 
+  schedule:
+    - cron: "0 18 * * *"
+
 jobs:
   setup:
     runs-on: ubuntu-latest
@@ -74,7 +77,7 @@ jobs:
           echo "npm-tag=alpha" >> $GITHUB_OUTPUT
           echo "sample-ref=dev" >> $GITHUB_OUTPUT
           echo "branch=dev" >> $GITHUB_OUTPUT
-          echo "email-receiver=vsciotadt@microsoft.com;teamsfxqa@microsoft.com" >> $GITHUB_OUTPUT
+          echo "email-receiver=teamsfxqa@microsoft.com" >> $GITHUB_OUTPUT
 
           run_id=`gh run list --workflow cd --repo OfficeDev/TeamsFx --branch dev --json event --json databaseId --json conclusion --jq '[.[] | select(.event=="schedule") | select(.conclusion=="success")][0].databaseId'`
           echo "vsix-run-id=$run_id" >> $GITHUB_ENV
