--- a/.github/workflows/rerun.yml
+++ b/.github/workflows/rerun.yml
@@ -51,6 +51,9 @@ jobs:
       M365_ACCOUNT_NAME: "test14@xxbdw.onmicrosoft.com"
       M365_ACCOUNT_PASSWORD: ${{ secrets.TEST_M365_PASSWORD }}
       M365_DISPLAY_NAME: "ttktest"
+      M365_USERNAME_2: "test15@xxbdw.onmicrosoft.com"
+      M365_USERNAME_3: "test16@xxbdw.onmicrosoft.com"
+      M365_USERNAME_4: "test17@xxbdw.onmicrosoft.com"
       CLEAN_CLIENT_ID: ${{ secrets.TEST_CLEAN_CLIENT_ID }}
       CLEAN_CLIENT_SECRET: ${{ secrets.CLEAN_CLIENT_SECRET }}
       CLEAN_TENANT_ID: ${{ secrets.TEST_CLEAN_TENANT_ID }}
