--- a/.github/workflows/issue-milestoned.yml
+++ b/.github/workflows/issue-milestoned.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Copy action
         run: cp -r .github/actions/issue-milestoned ./action-base/issue-milestoned
       - name: Npm install dependencies
-        run: npm install fs-extra azure-devops-node-api --prefix ./action-base
+        run: npm install azure-devops-node-api --prefix ./action-base
       - name: Npm install
         run: npm install --production --prefix ./action-base
       - name: Build action
