--- a/.github/workflows/issue-milestoned.yml
+++ b/.github/workflows/issue-milestoned.yml
@@ -23,7 +23,10 @@ jobs:
          path: ./action-base
       
       - name: Copy action
-        run: cp -r .github/actions/issue-milestoned ./action-base/issue-milestoned
+        run: |
+          cp -r .github/actions/issue-milestoned ./action-base/issue-milestoned
+          cp -r .github/actions/teamsfx-utils ./action-base/teamsfx-utils
+
       - name: Npm install dependencies
         run: npm install azure-devops-node-api --prefix ./action-base
       - name: Npm install
