--- a/.github/workflows/issue-milestoned.yml
+++ b/.github/workflows/issue-milestoned.yml
@@ -23,9 +23,12 @@ jobs:
          path: ./action-base
       
       - name: Copy action
-        run: cp -r .github/actions/issue-milestoned ./action-base/issue-milestoned
+        run: |
+          cp -r .github/actions/issue-milestoned ./action-base/issue-milestoned
+          cp -r .github/actions/teamsfx-utils ./action-base/teamsfx-utils
+
       - name: Npm install dependencies
-        run: npm install fs-extra azure-devops-node-api --prefix ./action-base
+        run: npm install azure-devops-node-api --prefix ./action-base
       - name: Npm install
         run: npm install --production --prefix ./action-base
       - name: Build action
