--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -1270,7 +1270,9 @@
     "url-loader": "^4.1.1",
     "uuid": "^8.3.2",
     "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "keytar": "^7.7.0",
+    "node-loader": "^2.0.0"
   },
   "dependencies": {
     "@azure/identity": "^3.1.3",
