--- a/.github/workflows/ui-test.yml
+++ b/.github/workflows/ui-test.yml
@@ -368,7 +368,7 @@ jobs:
 
       - name: Upload test result json file
         uses: actions/upload-artifact@v3
-        if: failure()
+        if: ${{ github.event_name != 'schedule' || success() || (failure() && github.run_attempt >= 5) }}
         with:
           name: test result ${{ matrix.test-case }} ${{ matrix.os }}
           path: ./packages/tests/mochawesome-report/mochawesome.json
