--- a/.github/workflows/code-cleanup-report.yml
+++ b/.github/workflows/code-cleanup-report.yml
@@ -6,7 +6,7 @@ on:
     - cron: '0 0 * * *'
 
 jobs:
-  unused-vars:
+  missing-header:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -40,62 +40,9 @@ jobs:
         command: |
           npm run setup
 
-    - name: Detect unused vars
-      run: npx eslint --no-eslintrc --rule '{@typescript-eslint/no-unused-vars:error}' --env browser,es6,node --parser-options ecmaVersion:2018 --parser-options sourceType:"module" --parser '@typescript-eslint/parser' --plugin "@typescript-eslint" src/**/*.ts
-      working-directory: packages/${{matrix.package}}
-
-  unused-exports:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        package:
-        - fx-core
-        - server
-        - vscode-extension
-        - manifest
-        - api
-        - cli
-
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-          
-    - name: Install tools
-      run: npm install -g ts-unused-exports
-
-    - name: Detect unused exports
-      run: ts-unused-exports tsconfig.json --excludePathsFromReport=src/index.ts
-      working-directory: packages/${{matrix.package}}
-
-  missing-codeowners:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        package:
-        - fx-core
-        - server
-        - vscode-extension
-        - manifest
-        - api
-        - cli
-    
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-
-    - run: |
-        npm install -g @snyk/github-codeowners
-
-    - name: Find files with no codeowners
+    - name: Detect missing header file
       run: |
-        files=$(github-codeowners audit -u -r packages/${{matrix.package}})
-
-        if [ -n "$files" ]; then
-          echo "The following files do not have an owner:"
-          echo "$files"
-          exit 1
-        else
-          echo "All files have an owner."
-        fi
+        npm i -d eslint-plugin-header
+        npx eslint --no-eslintrc --plugin header --rule '{"header/header": [2, "../eslint-plugin-teamsfx/config/header.js"]}' --parser-options ecmaVersion:2018 --parser-options sourceType:"module" --parser '@typescript-eslint/parser' --plugin "@typescript-eslint" src/**/*.ts --format json --output-file header-check.json
+        node ../eslint-plugin-teamsfx/lib/calcHeader.js
+      working-directory: packages/${{matrix.package}}
