--- a/.github/workflows/code-cleanup-report.yml
+++ b/.github/workflows/code-cleanup-report.yml
@@ -47,6 +47,6 @@ jobs:
 
     - name: Detect missing header file
       run: |
-        npx eslint --no-eslintrc --plugin header --rule '{"header/header": [2, "../eslint-plugin-teamsfx/config/header.js"]}' --parser-options ecmaVersion:2018 --parser-options sourceType:"module" --parser '@typescript-eslint/parser' --plugin "@typescript-eslint" src/**/*.ts --format json --output-file header-check.json
+        npx eslint --no-eslintrc --plugin header --rule '{"header/header": [2, "../eslint-plugin-teamsfx/config/header.js"]}' --parser-options ecmaVersion:2018 --parser-options sourceType:"module" --parser '@typescript-eslint/parser' --plugin "@typescript-eslint" src/**/*.ts --format json --output-file header-check.json || true
         node ../eslint-plugin-teamsfx/lib/calcHeader.js
       working-directory: packages/${{matrix.package}}
