--- a/.github/workflows/code-cleanup-report.yml
+++ b/.github/workflows/code-cleanup-report.yml
@@ -40,13 +40,20 @@ jobs:
         command: |
           npm run setup
 
-    - name: install eslint-plugin-header
+    - name: Install eslint-plugin-header
       run: |
         npm i -d eslint-plugin-header
       working-directory: packages/${{matrix.package}}
 
     - name: Detect missing header file
+      continue-on-error: true
       run: |
-        npx eslint --no-eslintrc --plugin header --rule '{"header/header": [2, "../eslint-plugin-teamsfx/config/header.js"]}' --parser-options ecmaVersion:2018 --parser-options sourceType:"module" --parser '@typescript-eslint/parser' --plugin "@typescript-eslint" src/**/*.ts --format json --output-file header-check.json || true
+        npx eslint --no-eslintrc --plugin header --rule '{"header/header": [2, "../eslint-plugin-teamsfx/config/header.js"]}' --parser-options ecmaVersion:2018 --parser-options sourceType:"module" --parser '@typescript-eslint/parser' --plugin "@typescript-eslint" src/**/*.ts --format json --output-file header-check.json
+      working-directory: packages/${{matrix.package}}
+
+    - name:  Calculate missing header
+      run: |
         node ../eslint-plugin-teamsfx/lib/calcHeader.js
       working-directory: packages/${{matrix.package}}
+
+
