--- a/.github/workflows/ui-test.yml
+++ b/.github/workflows/ui-test.yml
@@ -370,7 +370,7 @@ jobs:
         uses: actions/upload-artifact@v3
         if: ${{ github.event_name != 'schedule' || success() || (failure() && github.run_attempt >= 5) }}
         with:
-          name: test result ${{ matrix.test-case }} ${{ matrix.os }}
+          name: test-result-${{ matrix.test-case }}-${{ matrix.os }}
           path: ./packages/tests/mochawesome-report/mochawesome.json
 
       - name: Upload screenshots
