--- a/packages/eslint-plugin-teamsfx/package.json
+++ b/packages/eslint-plugin-teamsfx/package.json
@@ -24,6 +24,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-eslint-plugin": "^4.0.1",
+    "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-no-secrets": "^0.8.9",
