--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -172,6 +172,7 @@
     "copy-webpack-plugin": "^6.4.1",
     "dotenv": "^8.2.0",
     "eslint": "^7.22.0",
+    "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-prettier": "^4.0.0",
