--- a/packages/metrics-ts/package.json
+++ b/packages/metrics-ts/package.json
@@ -36,6 +36,7 @@
     "@typescript-eslint/parser": "^4.19.0",
     "chai": "^4.3.4",
     "eslint": "^7.22.0",
+    "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-prettier": "^4.0.0",
