--- a/packages/sdk-react/package.json
+++ b/packages/sdk-react/package.json
@@ -44,6 +44,7 @@
     "@typescript-eslint/parser": "^5.13.0",
     "eslint": "^8.15.0",
     "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-n": "^15.2.0",
