--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -88,6 +88,7 @@
     "chai-as-promised": "^7.1.1",
     "dotenv": "^10.0.0",
     "eslint": "^8.1.0",
+    "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-prettier": "^4.0.0",
