--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -64,6 +64,7 @@
     "copyfiles": "^2.4.1",
     "css-loader": "^5.2.5",
     "eslint": "^7.9.0",
+    "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-prettier": "^4.0.0",
