--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -1236,6 +1236,7 @@
     "css-loader": "^5.1.3",
     "detect-port": "^1.3.0",
     "eslint": "^8.1.0",
+    "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-prettier": "^4.0.0",
