--- a/.github/workflows/code-cleanup-report.yml
+++ b/.github/workflows/code-cleanup-report.yml
@@ -42,13 +42,18 @@ jobs:
 
     - name: Install eslint-plugin-header
       run: |
-        npm i -d eslint-plugin-header
+        npm i -D eslint-plugin-header
+      working-directory: packages/${{matrix.package}}
+
+    - name: Install eslint-plugin-header
+      run: |
+        sed -i 's/share/header/g' .eslintrc.js
       working-directory: packages/${{matrix.package}}
 
     - name: Detect missing header file
       continue-on-error: true
       run: |
-        npx eslint --no-eslintrc --plugin header --rule '{"header/header": [2, "../eslint-plugin-teamsfx/config/header.js"]}' --parser-options ecmaVersion:2018 --parser-options sourceType:"module" --parser '@typescript-eslint/parser' --plugin "@typescript-eslint" src/**/*.ts --format unix
+        npx eslint  src/**/*.ts --format unix
       working-directory: packages/${{matrix.package}}
 
 
