--- a/packages/eslint-plugin-teamsfx/package.json
+++ b/packages/eslint-plugin-teamsfx/package.json
@@ -21,6 +21,7 @@
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.9.0",
+    "eslint-plugin-header": "^3.1.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-eslint-plugin": "^4.0.1",
