--- a/packages/extra-shot-mocha/package.json
+++ b/packages/extra-shot-mocha/package.json
@@ -29,6 +29,7 @@
     "@typescript-eslint/parser": "^4.19.0",
     "chai": "^4.2.0",
     "eslint": "^7.9.0",
+    "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-prettier": "^4.0.0",
