--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -65,7 +65,9 @@ jobs:
         continue-on-error: true
         uses: codecov/codecov-action@v3
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: true
+          verbose: true
 
       - name: delay 10s for attempt 2
         if: steps.codecov1.outcome == 'failure'
@@ -78,7 +80,9 @@ jobs:
         continue-on-error: true
         uses: codecov/codecov-action@v3
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: true
+          verbose: true
 
       - name: delay 10s for attempt 3
         if: steps.codecov2.outcome == 'failure'
@@ -91,4 +95,35 @@ jobs:
         continue-on-error: true
         uses: codecov/codecov-action@v3
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: true
+          verbose: true
+
+      - name: delay 10s for attempt 4
+        if: steps.codecov3.outcome == 'failure'
+        run: |
+          sleep 10s
+
+      - name: CodeCov report attempt 4
+        id: codecov4
+        if: steps.codecov3.outcome == 'failure'
+        continue-on-error: true
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
+          verbose: true
+
+      - name: delay 10s for attempt 5
+        if: steps.codecov4.outcome == 'failure'
+        run: |
+          sleep 10s
+
+      - name: CodeCov report attempt 5
+        id: codecov5
+        if: steps.codecov4.outcome == 'failure'
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
+          verbose: true
