--- a/.github/workflows/code-cleanup-report.yml
+++ b/.github/workflows/code-cleanup-report.yml
@@ -156,6 +156,7 @@ jobs:
       matrix:
         package:
         - fx-core
+        - server
         - vscode-extension
         - manifest
         - api
@@ -199,6 +200,7 @@ jobs:
       matrix:
         package:
         - fx-core
+        - server
         - vscode-extension
         - manifest
         - api
@@ -242,6 +244,7 @@ jobs:
       matrix:
         package:
         - fx-core
+        - server
         - vscode-extension
         - manifest
         - api
