refactor: add success message

--- a/packages/vscode-extension/tsconfig.eslint.json
+++ b/packages/vscode-extension/tsconfig.eslint.json
@@ -8,7 +8,7 @@
     "include": [
       // whatever paths you intend to lint
       "src",
-      "tests"
+      "test"
     ],
     "exclude": []
 }
